<resources>
    <string name="app_name">AsGerenciadorDeInvestimentos</string>
    <string name="home">Home</string>
    <string name="adicionar">Adicionar</string>
    <string name="mercado">Mercado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_de_investimentos">Total de investimentos</string>
    <string name="r">R$</string>
    <string name="adicionar_moeda">Adicionar Moeda</string>
    <string name="imagem_de_bitcoin">Imagem de bitcoin</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="btc">BTC</string>
    <string name="ethereum">Ethereum</string>
    <string name="eth">ETH</string>
    <string name="xrp">XRP</string>
    <string name="bitcoin_cash">Bitcoin Cash</string>
    <string name="bch">BCH</string>
    <string name="litecoin">Litecoin</string>
    <string name="ltc">LTC</string>
    <string name="comprar">Comprar</string>
    <string name="pre_o_por_moeda">Preço por moeda</string>
    <string name="cifrao">$</string>
    <string name="quantidade">Quantidade</string>
    <string name="voc_n_o_tem_nenhuma_moeda_ativda">Você não tem nenhuma moeda ativda</string>
</resources>
